# Salary-Prediction-

./: README.md  app.py  employees.py  index.html  model.ipynb  pipeline.pkl  pyproject.toml  requirement.txt  requirements.txt
